[gd_scene load_steps=19 format=3 uid="uid://po63m4srixl4"]

[ext_resource type="PackedScene" uid="uid://cf0w0skqs3k64" path="res://Scenes/player.tscn" id="2_21dfl"]
[ext_resource type="PackedScene" uid="uid://byyr01tut00wv" path="res://Scenes/wooden_plate.tscn" id="2_r4p77"]
[ext_resource type="PackedScene" uid="uid://mwc0yxpimqf2" path="res://Scenes/plate.tscn" id="2_r4wj5"]
[ext_resource type="Script" uid="uid://cge6qchhlco1y" path="res://Scripts/DeadZone.gd" id="4_8ry15"]
[ext_resource type="PackedScene" uid="uid://bk5n0tn4k1l0c" path="res://Scenes/Coin.tscn" id="5_4fiv6"]
[ext_resource type="Script" uid="uid://cn1d0dkhxqpki" path="res://Scripts/GameManager.gd" id="6_8fvkd"]
[ext_resource type="Texture2D" uid="uid://cnbbny7qjh2xn" path="res://Assets/Textures/coin.png" id="7_ow7xm"]
[ext_resource type="Script" uid="uid://n0xgrr51qilv" path="res://Scripts/GameUI.gd" id="7_x8whp"]
[ext_resource type="Texture2D" uid="uid://hk3gj75327hy" path="res://Assets/Textures/Logo.png" id="9_46gx6"]
[ext_resource type="FontFile" uid="uid://c83iwb7khxgo0" path="res://Assets/paaymaay_regular.ttf" id="10_okl2h"]

[sub_resource type="Environment" id="Environment_g4ka7"]
background_mode = 1
background_color = Color(0.764706, 0.764706, 0.764706, 1)
ambient_light_source = 2
ambient_light_color = Color(0.662745, 0.694118, 0.772549, 1)
ambient_light_energy = 1.15
tonemap_mode = 2
tonemap_exposure = 0.75
ssr_enabled = true
ssao_enabled = true
ssao_radius = 0.45
ssao_intensity = 1.0
ssao_power = 15.0
ssil_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
glow_intensity = 2.0
fog_light_color = Color(0.647059, 0.678431, 0.72549, 1)
volumetric_fog_temporal_reprojection_enabled = false
adjustment_enabled = true
adjustment_brightness = 1.06
adjustment_contrast = 0.95
adjustment_saturation = 1.09

[sub_resource type="SystemFont" id="SystemFont_om7om"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="SystemFont" id="SystemFont_ub50t"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="BoxShape3D" id="BoxShape3D_asf4q"]
size = Vector3(128, 17, 112)

[sub_resource type="SystemFont" id="SystemFont_1ixsq"]
font_names = PackedStringArray("Star Choco")
multichannel_signed_distance_field = true

[sub_resource type="SystemFont" id="SystemFont_656xb"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="LabelSettings" id="LabelSettings_igq7x"]
font = SubResource("SystemFont_656xb")
font_size = 50
font_color = Color(0.996094, 0.691406, 0.261719, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ad2i4"]
font = ExtResource("10_okl2h")
font_size = 40
font_color = Color(0, 0, 0, 1)

[node name="DemoScene" type="Node3D"]

[node name="Player" parent="." instance=ExtResource("2_21dfl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Platforms" type="Node3D" parent="."]

[node name="plate2" parent="Platforms" instance=ExtResource("2_r4wj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.1200542, -21.11434)

[node name="wooden_plate" parent="Platforms" instance=ExtResource("2_r4p77")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7231016, -10.998564)

[node name="plate" parent="Platforms" instance=ExtResource("2_r4wj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.900692, 0)

[node name="wooden_plate2" parent="Platforms" instance=ExtResource("2_r4p77")]
transform = Transform3D(0.99820966, 0, -0.059811622, 0, 1, 0, 0.059811622, 0, 0.99820966, 9.373975, 4.9665804, -21.515352)

[node name="plate3" parent="Platforms" instance=ExtResource("2_r4wj5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.766693, 5.5420856, -15.052577)

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_g4ka7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.898603, 0.438763, 2.98254e-08, 0.146657, 0.300359, 0.942484, 0.413527, 0.846919, -0.334251, 9.04457, 6.63937, -28.4749)
shadow_enabled = true

[node name="Extras" type="Node3D" parent="."]

[node name="SpawnPosition" type="Marker3D" parent="Extras"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Sprite3D" type="Sprite3D" parent="Extras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, -40)
texture = ExtResource("9_46gx6")

[node name="Features" type="Label3D" parent="Extras"]
transform = Transform3D(0.387789, 0, 0.921748, 0, 1, 0, -0.921748, 0, 0.387789, -14.0511, 5.78537, -6.67751)
text = "Features:
Working Controller
Double Jump
Basic Score System
Animations"
font = SubResource("SystemFont_om7om")
font_size = 250
outline_size = 0
uppercase = true

[node name="Credits" type="Label3D" parent="Extras"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0336823, 4.71136, 8.82437)
text = "Platform Models By: Rayyan Aziz
Character By: GDQuest
Programming & Level Design: Adil Shafiq"
font = SubResource("SystemFont_ub50t")
font_size = 100
outline_size = 0
uppercase = true

[node name="Coins" type="Node3D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.4476075, -11)

[node name="Coin2" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.36921, -21.6303)

[node name="Coin3" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.14233, 7.06635, -20.9353)

[node name="Coin4" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8983, 8.76539, -23.322426)

[node name="Coin5" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8983, 9.70155, -7.465186)

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("6_8fvkd")

[node name="DeadZone" type="Area3D" parent="."]
script = ExtResource("4_8ry15")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeadZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0)
shape = SubResource("BoxShape3D_asf4q")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_x8whp")

[node name="CoinTexture" type="TextureRect" parent="UserInterface/GameUI"]
layout_mode = 0
offset_left = 32.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 121.0
texture = ExtResource("7_ow7xm")
expand_mode = 1
stretch_mode = 4

[node name="CoinsLabel" type="Label" parent="UserInterface/GameUI"]
layout_mode = 0
offset_left = 136.0
offset_top = 50.0
offset_right = 193.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.996094, 0.710938, 0.261719, 1)
theme_override_colors/font_outline_color = Color(0.644531, 0.410156, 0.1875, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_1ixsq")
theme_override_font_sizes/font_size = 48
text = "X 3"
label_settings = SubResource("LabelSettings_igq7x")

[node name="NameLabel" type="Label" parent="UserInterface/GameUI"]
layout_mode = 0
offset_left = 715.0
offset_top = 67.0
offset_right = 1131.0
offset_bottom = 96.0
text = "นายชลวิชญ์  ลิลาศ   663380260-7 		"
label_settings = SubResource("LabelSettings_ad2i4")

[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_body_entered"]
